# wolkenlose-ki-fuer-zu-hause

./: .gitignore  LICENSE  README.md  compose.yaml  pyproject.toml  wolkenlose-ki-fuer-zu-hause.ipynb
common/: settings.py
data/: README.md
prepare/: convert_pdf_to_markdown.py  download_gemeindezeitungen.py  download_models.py
